<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>go.gg.safety</groupId>
    <artifactId>parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <description>경기도 IoT기반 스마트글라스 활용 원격 안전점검시스템 구축 프로젝트</description>
    <url>http://www.deepfine.ai</url>

    <!--
        ## 하위 모듈 구성
        # common : 공통모듈
        # web : 도민청구 웹사이트 사용자 사이트 모듈
        # cms : 통합 관리자 사이트(CMS) 모듈
    -->
    <modules>
        <module>cms</module>
        <module>web</module>
        <module>common</module>
    </modules>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <spring.maven.artifact.version>4.3.22.RELEASE</spring.maven.artifact.version>
        <egovframework.rte.version>3.9.0</egovframework.rte.version>

        <!--↓↓↓↓↓↓↓ 필요 Property 추가 (반드시 추가자 명시!!!) Start ↓↓↓↓↓↓↓-->

        <!-- Java 버전 공통관리 (jm.lee) -->
        <java.version>1.8</java.version>

        <!-- 기본 Encoding CharacterSet 공통관리 (jm.lee) -->
        <default.encoding>UTF-8</default.encoding>

        <!-- 하위모듈 버전 공통관리 (jm.lee) -->
        <module.version.common>1.0.0-SNAPSHOT</module.version.common>
        <module.version.cms>1.0.0-SNAPSHOT</module.version.cms>
        <module.version.web>1.0.0-SNAPSHOT</module.version.web>

        <!-- Nexus Repository URL 공통관리 (jm.lee) -->
        <!-- todo: 넥서스 세팅 완료 후, Repository URL 등록 예정 (jm.lee) -->
        <nexus.url.releases>http://127.0.0.1</nexus.url.releases>
        <nexus.url.snapshot>http://127.0.0.1</nexus.url.snapshot>
        <nexus.url.3rdParty>http://127.0.0.1</nexus.url.3rdParty>

        <!--↑↑↑↑↑↑↑ 필요 Property 추가 (반드시 추가자 명시!!!) End ↑↑↑↑↑↑↑-->
    </properties>

    <repositories>
        <repository>
            <id>mvn2s</id>
            <url>https://repo1.maven.org/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>egovframe</id>
            <url>http://maven.egovframe.kr:8080/maven/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>egovframe2</id>
            <url>http://www.egovframe.go.kr/maven/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>


    <!--
        ## 별도 관리용 의존성 정보는 아래 추가 (실제 라이브러리가 추가되는 것은 아님)
        ↓↓↓↓↓↓↓ 필요 Dependency Management 추가 (반드시 추가자 명시!!!) Start ↓↓↓↓↓↓↓
    -->
    <dependencyManagement>
        <dependencies>
            <!-- 프로젝트 공통 모듈 (jm.lee) -->
            <dependency>
                <groupId>go.gg.safety</groupId>
                <artifactId>common</artifactId>
                <version>${module.version.common}</version>
            </dependency>

            <!-- DB Connection Pool : Apache Commons DBCP2 (jm.lee) -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-dbcp2</artifactId>
                <version>2.7.0</version>
            </dependency>

            <!-- JDBC : PostgreSQL (jm.lee) -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.2.14</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <!--↑↑↑↑↑↑↑ 필요 Dependency Management 추가 (반드시 추가자 명시!!!) End ↑↑↑↑↑↑↑-->

    <dependencies>
        <!-- 표준프레임워크 실행환경 -->
        <dependency>
            <groupId>egovframework.rte</groupId>
            <artifactId>egovframework.rte.ptl.mvc</artifactId>
            <version>${egovframework.rte.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-logging</artifactId>
                    <groupId>commons-logging</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>egovframework.rte</groupId>
            <artifactId>egovframework.rte.psl.dataaccess</artifactId>
            <version>${egovframework.rte.version}</version>
        </dependency>
        <dependency>
            <groupId>egovframework.rte</groupId>
            <artifactId>egovframework.rte.fdl.idgnr</artifactId>
            <version>${egovframework.rte.version}</version>
        </dependency>
        <dependency>
            <groupId>egovframework.rte</groupId>
            <artifactId>egovframework.rte.fdl.property</artifactId>
            <version>${egovframework.rte.version}</version>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <scope>provided</scope>
            <version>2.5</version>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
        </dependency>

        <dependency>
            <groupId>taglibs</groupId>
            <artifactId>standard</artifactId>
            <version>1.1.2</version>
        </dependency>

        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr</artifactId>
            <version>3.5</version>
        </dependency>

        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.3.2</version>
        </dependency>

        <!-- mysql이나 oracle DB 사용시 아래 설정 추가
        <dependency>
            <groupId>com.googlecode.log4jdbc</groupId>
            <artifactId>log4jdbc</artifactId>
            <version>1.2</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.31</version>
        </dependency>

        <dependency>
            <groupId>ojdbc</groupId>
            <artifactId>ojdbc</artifactId>
            <version>14</version>
            <scope>system</scope>
            <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ojdbc-14.jar</systemPath>
        </dependency>
        -->


        <!--↓↓↓↓↓↓↓ 필요 Library 추가 (반드시 추가자 명시!!!) Start ↓↓↓↓↓↓↓-->

        <!-- DB Connection Pool : Apache Commons DBCP2 (jm.lee) -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
        </dependency>

        <!-- JDBC : PostgreSQL (jm.lee) -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>

        <!-- XSS: Naver Lucy (jm.lee) -->
        <dependency>
            <groupId>com.navercorp.lucy</groupId>
            <artifactId>lucy-xss-servlet</artifactId>
            <version>2.0.1</version>
        </dependency>

        <!-- JSON Serializer : Jackson ObjectMapper (jm.lee) -->
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.11.1</version>
        </dependency>

        <!-- JSON Parser : Jackson Data Binder (jm.lee) -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.11.1</version>
        </dependency>

        <!-- Local Cache : EHCache (jm.lee) -->
        <dependency>
            <groupId>net.sf.ehcache</groupId>
            <artifactId>ehcache</artifactId>
            <version>2.10.6</version>
        </dependency>

        <!-- Local Cache : Spring Caching Interface (jm.lee) -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>4.3.20.RELEASE</version>
        </dependency>

        <!-- Local Cache : EHCache Support 모듈, 다른 Caching 지원모듈 (jm.lee) -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>4.3.20.RELEASE</version>
        </dependency>

        <!-- todo: lombok 추가 예정 (jm.lee) -->
        <!-- todo: JSON 파싱 라이브러리 추가 예정 (Jackson 사용 예정) (jm.lee) -->
        <!-- todo: 보안 관련 인증토큰 라이브러리 추가 예정 (JWT 사용 예정) (jm.lee) -->
        <!-- todo: 데이터 캐싱 관련 라이브러리 추가 예정 (ehcache or redis 둘 중 하나 사용 예정) (jm.lee) -->

        <!-- todo: 시리얼라이징, 마샬/언마샬 별도 라이브러리로 쓸 필요가 있을지 확인 필요. 요건/기능분석 후 내부적으로 논의해서 결정만 하면 될 듯 (jm.lee) -->
        <!-- todo: oAuth 사용할지 확인해야 함 (현업과 논의할지 또는 내부적으로 사용/배제할지 결정 필요. 사용 시 oAuth2.0 추가 및 JWT 연동 필요. 사용한다 해도 아마 사용자만 추가하면 될 듯) (jm.lee) -->
        <!-- todo: 메일서버 확인 필요 (별도 서버/서비스 보유 or 자체 SMTP 사용. SMTP 사용 시, 방화벽과 사용할 메일도메인의 화이트리스트 체크해야 함) (jm.lee) -->

        <!--↑↑↑↑↑↑↑ 필요 Library 추가 (반드시 추가자 명시!!!) End ↑↑↑↑↑↑↑-->
    </dependencies>

    <build>
        <defaultGoal>install</defaultGoal>
        <directory>${basedir}/target</directory>
        <finalName>${artifactId}-${version}</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.tomcat.maven</groupId>
                    <artifactId>tomcat7-maven-plugin</artifactId>
                    <version>2.2</version>
                    <configuration>
                        <port>80</port>
                        <path>/</path>
                        <systemProperties>
                            <JAVA_OPTS>-Xms256m -Xmx768m -XX:MaxPermSize=256m</JAVA_OPTS>
                        </systemProperties>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${default.encoding}</encoding>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>hibernate3-maven-plugin</artifactId>
                    <version>2.1</version>
                    <configuration>
                        <components>
                            <component>
                                <name>hbm2ddl</name>
                                <implementation>annotationconfiguration</implementation>
                            </component>
                        </components>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.hsqldb</groupId>
                            <artifactId>hsqldb</artifactId>
                            <version>2.3.2</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <!-- EMMA -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>emma-maven-plugin</artifactId>
                    <version>1.0-alpha-3</version>
                </plugin>
                <!-- PMD manven plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>3.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- EMMA -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>true</skipTests>
                    <forkMode>once</forkMode>
                    <reportFormat>xml</reportFormat>
                    <excludes>
                        <exclude>**/Abstract*.java</exclude>
                        <exclude>**/*Suite.java</exclude>
                    </excludes>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>emma-maven-plugin</artifactId>
                <inherited>true</inherited>
            </plugin>
            <!-- JavaDoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9.1</version>
            </plugin>
        </plugins>
    </build>
</project>
